fixed minor z-index issue for tooltips in sidebar

--- a/themes/grav/css-compiled/template.css
+++ b/themes/grav/css-compiled/template.css
@@ -2071,7 +2071,7 @@ table.noflex {
   width: 100%;
   max-height: 100vh;
   opacity: 0;
-  z-index: 0; }
+  z-index: 1; }
   #admin-sidebar #open-handle {
     display: block;
     position: absolute;
