--- a/themes/grav/scss/template/_admin.scss
+++ b/themes/grav/scss/template/_admin.scss
@@ -165,7 +165,7 @@ $content-padding: 1.5rem;
     width: 100%;
     max-height: 100vh;
     opacity: 0;
-    z-index: 0;
+    z-index: 1;
     //transition: opacity 0.2s 0s, visibility 0s 0.2s;
 
     #open-handle {
